[gd_scene load_steps=3 format=3 uid="uid://b18u25luwvt40"]

[ext_resource type="Script" uid="uid://eek7ynps203f" path="res://Frontend/Desktop/SubScenes/ActiveWorldPane.gd" id="1_8it6j"]
[ext_resource type="Texture2D" uid="uid://bqt3ukcfoh2fl" path="res://Frontend/Image Loading.png" id="2_irg5p"]

[node name="Instance Pane" type="Panel"]
custom_minimum_size = Vector2(367, 150)
anchors_preset = -1
anchor_right = 0.319
anchor_bottom = 0.231
offset_right = -0.488007
offset_bottom = 0.311996
size_flags_vertical = 0
script = ExtResource("1_8it6j")

[node name="Details button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.011
anchor_top = 0.767
anchor_right = 0.989
anchor_bottom = 0.973
offset_left = -0.0370002
offset_top = -0.0500031
offset_right = 0.0369873
offset_bottom = 0.0500031
text = "Details"

[node name="HDteailContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.008
anchor_top = 0.02
anchor_right = 0.992
anchor_bottom = 0.667
offset_left = 0.0639999
offset_right = -0.0640259
offset_bottom = -0.0500107

[node name="World Image" type="TextureRect" parent="HDteailContainer"]
layout_mode = 2
texture = ExtResource("2_irg5p")
expand_mode = 3
stretch_mode = 4

[node name="DetailsContainer" type="VBoxContainer" parent="HDteailContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WorldName" type="Label" parent="HDteailContainer/DetailsContainer"]
clip_contents = true
layout_mode = 2
text = "World Name"
clip_text = true

[node name="ID" type="Label" parent="HDteailContainer/DetailsContainer"]
layout_mode = 2
text = "Instance ID"
clip_text = true

[node name="PlayerCountContainer" type="HBoxContainer" parent="HDteailContainer/DetailsContainer"]
layout_mode = 2

[node name="Connected Players" type="Label" parent="HDteailContainer/DetailsContainer/PlayerCountContainer"]
layout_mode = 2
text = "Connected Players:"

[node name="PlayerCount" type="Label" parent="HDteailContainer/DetailsContainer/PlayerCountContainer"]
layout_mode = 2
text = "100"

[node name="Locale" type="TextureRect" parent="HDteailContainer/DetailsContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_irg5p")
expand_mode = 3
stretch_mode = 4

[connection signal="pressed" from="Details button" to="." method="_on_details_pressed"]
